# clip

./: CHANGELOG.md  CMakeLists.txt  README.md  meson.build
.github/workflows/: cmake-multi-platform.yml
src/: main.c
